Configurações padroes RoBrowserServeDockerCompose
Configurações padrões para o RoBrowserServeDockerCompose, utilizar o docker com as configurações de banco

--- a/conf/inter-server.conf
+++ b/conf/inter-server.conf
@@ -39,7 +39,7 @@ party_share_level: 15
 // Isso ocorre com a seguinte mensagem: "Não é possível conectar ao servidor MySQL local através do socket '/tmp/mysql.sock' (2)"
 
 // Banco de dados de informações do servidor de login.
-sql.db_hostname: 127.0.0.1
+sql.db_hostname: db
 sql.db_port: 3306
 sql.db_username: ragnarok
 sql.db_password: ragnarok
@@ -47,34 +47,34 @@ sql.db_database: ragnarok
 sql.codepage:
 
 // Banco de dados de informações do servidor de personagens.
-char_server_ip: 127.0.0.1
+char_server_ip: db
 char_server_port: 3306
 char_server_id: ragnarok
 char_server_pw: ragnarok
 char_server_db: ragnarok
 
 // Banco de dados de informações do servidor de mapas.
-map_server_ip: 127.0.0.1
+map_server_ip: db
 map_server_port: 3306
 map_server_id: ragnarok
 map_server_pw: ragnarok
 map_server_db: ragnarok
 
 // Banco de dados de logs.
-log_db_ip: 127.0.0.1
+log_db_ip: db
 log_db_port: 3306
 log_db_id: ragnarok
 log_db_pw: ragnarok
-log_db_db: log
+log_db_db: ragnarok
 log_codepage:
 log_login_db: loginlog
 
 // Banco de dados de itens, habilidades, monstros e etc.
-brAdb_ip: 127.0.0.1
+brAdb_ip: db
 brAdb_port: 3306
 brAdb_id: ragnarok
 brAdb_pw: ragnarok
-brAdb_name: bra_db
+brAdb_name: ragnarok
 
 // Configuração de conexão ao MySQL
 // 1: Quando o mysql se desconectar durante tempo de execução, o servidor vai tentar conectar ao mysql e se falhar, o servidor é fechado.
